--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
     "natural-compare-lite": "^1.4.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
